[gd_scene load_steps=2 format=3 uid="uid://d2l4n5p8m9j1"]

[ext_resource type="Script" path="res://scripts/LevelSelect.gd" id="1_levelselect"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_levelselect")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 117.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "SELECT LEVEL"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="Level1Button" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "1"

[node name="Level2Button" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "2"

[node name="Level3Button" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "3"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -100.0
offset_right = 50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "BACK"

[connection signal="pressed" from="GridContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="GridContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="GridContainer/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
